Update 실습 14 (라우팅).md

--- a/HTML_Javascript/실습 14 (라우팅).md
+++ b/HTML_Javascript/실습 14 (라우팅).md
@@ -159,3 +159,91 @@ sap.ui.define([
   }
 ]
 ```
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project10.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idTextMain" text="Main page" />
+        <Button text="화면 이동" press="onPress" />
+    </Page>
+</mvc:View>
+```
+</br>
+
+- Detail.view.xml
+```html
+<mvc:View controllerName="ycl2project10.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <Text id="idText" text="Detail page" />
+    </Page>
+</mvc:View>
+```
+</br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Main", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteMain").attachPatternMatched(this._onPatternMatched, this);
+        },
+        _onPatternMatched: function(oEvent) {
+            let sParam = oEvent.getParameters().arguments.mainParam;
+            this.byId("idTextMain").setText(sParam);
+        },
+        onPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteDetail", {
+                param1 : "hihi",
+                param2 : "okok"
+            }, false);      // 파라미터가 /detail/hihi/okok 이렇게 나옴
+            // Parameter 1 : 이동할 대상 routes의 name
+            // Parameter 2 : 화면 이동 시 전달할 파라미터들 지정
+            // Parameter 3 : router 히스토리 초기화 여부
+        }
+    });
+});
+```
+</br>
+
+- Detail.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project10.controller.Detail", {
+        onInit() {
+            // 컨트롤러 실행시 최초 1번
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteDetail").attachPatternMatched(this._ooo, this);
+        },
+        _ooo: function(oEvent) {
+            // route pattern matched 이벤트는
+            // URL이 일치할 때마다 실행
+
+            let sParam1 = oEvent.getParameters().arguments.param1;
+            this.byId("idText").setText(sParam1);
+        },
+        // onInit과 attachPatternMatched 함수(_ooo) 차이점 명확하게 이해하기
+        onNavButtonPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain", {
+                mainParam: "comeback main view"
+            }, false);
+        }
+    }); 
+});
+```
