Update 실습 14 (라우팅).md

--- a/HTML_Javascript/실습 14 (라우팅).md
+++ b/HTML_Javascript/실습 14 (라우팅).md
@@ -143,6 +143,8 @@ sap.ui.define([
 - 기존 코드가 Main→Detail 이동만 했다면, 이번 코드는 Detail 화면의 NavButton 클릭 시 mainParam("comeback main view")을 전달해 Main 화면으로 돌아오며 그 값을 표시하도록 확장한 버전
 </br>
 
+<img width="479" height="212" alt="image" src="https://github.com/user-attachments/assets/2217f104-8d9b-435d-b764-4ad9010c2224" />
+
 - manifest.json
 - "pattern": ":mainParam:" 으로 바꿔야 라우터가 파라미터가 있어도 되고 없어도 되는 Route로 인식해서 첫 진입(기본 Main)과 파라미터 이동(Detail→Main) 모두 정상 작동함
 ```java
