Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -71,6 +71,38 @@ oModel.read("EntitySet", {
     error: function(oError) {}     // 조회 실패 시 실행
 });
 ```
+</br>
+
+### oModel.createKey(sPath, oParameters);
+- OData 엔티티의 고유 경로(Key Path)를 생성하는 함수
+- `sPath` : 엔티티 세트 이름
+- `oParameters` : 엔티티 키(Primary Key) 이름과 값의 쌍
+```java
+oModel.createKey(sPath, oParameters);
+```
+- 단일 키
+```java
+var oModel = this.getView().getModel();
+
+var sKeyPath = oModel.createKey("/Products", {
+   ProductID: 1
+});
+
+console.log(sKeyPath);
+// 출력: "/Products(ProductID=1)"
+```
+- 복합 키
+```java
+var sKeyPath = oModel.createKey("/SalesOrderItems", {
+   SalesOrderID: "SO123",
+   ItemPosition: "10"
+});
+
+console.log(sKeyPath);
+// 출력: "/SalesOrderItems(SalesOrderID='SO123',ItemPosition='10')"
+```
+</br>
+
 ```java
 let oLocalModel = this.getView().getModel("local");
 let oModel = this.getOwnerComponent().getModel();   // OData Model. 이름없는 기본모델
@@ -81,9 +113,15 @@ let oFilter = new Filter({
     value2 : 20
 });
 
+oModel.createKey("/Products", {
+   OrderID : "1",
+   ProductID : "2"
+});
+// sPath => "Order_Details(OrderID=1, ProductID=2)"
+
 // .create() 생성 .read() 조회 .update() 업데이트 .remove() 삭제 
 // oModel.read("경로", {});
-oModel.read("/Products", {
+oModel.read("/Products", {            // oModel.read("/Products(${변수})" => 특정 엔티티(데이터 한 건)를 읽기
     urlParameters: {
         "$expand" : "Supplier"
     },
@@ -109,6 +147,32 @@ oModel.read("/Products", {
     error: function() {}
 });
 ```
+</br>
+
+### this 문제 해결 방법 (SAPUI5 비동기 함수 내부)
+- `success`, `error` 같은 콜백 함수 안에서는 `this`가 Controller를 잃어버림 → 해결 필요
+</br>
+
+1) `.bind(this)` 사용
+```java
+success: function(oReturn) {
+    this.getView(); // 정상 작동
+}.bind(this);
+```
+2) `let that = this;` 사용
+```java
+let that = this;
+success: function(oReturn) {
+    that.getView(); // that으로 컨트롤러 접근
+}
+```
+3) 필요한 변수 미리 선언
+4) ```java
+let oView = this.getView();
+success: function(oReturn) {
+    oView.getModel().setData(...);
+}
+111
 </br>
 
 ### OData URL
