Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -167,7 +167,7 @@ success: function(oReturn) {
 }
 ```
 3) 필요한 변수 미리 선언
-4) ```java
+```java
 let oView = this.getView();
 success: function(oReturn) {
     oView.getModel().setData(...);
