--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -1,6 +1,6 @@
 # 11/03(화) 기록
 # chart 생성
-### <viz:VizFrame>
+### `<viz:VizFrame>`
 - 차트를 그리는 핵심 컨트롤
 - `vizType` : 차트 종류 (line, bar, donut 등).
 - `vizProperties` : 제목, 레이블 등 차트 속성 설정.
