Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -1,8 +1,16 @@
 # 11/03(화) 기록
 # chart 생성
 ### `<viz:VizFrame>`
-- 차트를 그리는 핵심 컨트롤
-- `vizType` : 차트 종류 (line, bar, donut 등).
-- `vizProperties` : 제목, 레이블 등 차트 속성 설정.
+- 기능: 차트를 그리는 핵심 컨트롤
+- 사용 형식: `<Page>`나 `<Panel>` 안에 배치, 내부에 `<dataset>`와 `<feeds>` 포함
+- `vizType` : 차트 종류 (`line`, `bar`, `donut` 등)
+- `vizProperties` : 제목, 레이블 등 차트 속성 설정
 - `uiConfig` : Fiori UI 스타일 적용
+- `width/height` : 차트 크기 지정
 </br>
+
+### `<viz:dataset>` + `<FlattenedDataset>`
+- 차트에 표시할 데이터 집합 정의
+- 데이터 모델(`view>/list`)을 차트에서 읽어올 수 있도록 설정
+- `data="view>/list"` : 뷰 모델(view라는 이름의 JSONModel) 안의 list 배열 데이터를 바인딩
+- 이 안에는 Dimension(차원의 축) 과 Measure(수치 값) 을 정의
