Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -16,3 +16,12 @@
 - `<VizFrame>` 내부에 배치
 - 속성:
   - `data="{view>/list}"` : JSONModel(view)의 list 배열 데이터를 바인딩
+</br>
+
+### `<viz.data:dimensions>`
+- 차트의 범주(Category) 역할, X축이나 색상 구분에 사용
+- 여러 개 정의 가능, 도넛 차트에서는 색상을 구분하는 기준이 되기도 함
+- `<FlattenedDataset>` 안에 배치
+- 속성:
+  - `name` : 차트에서 표시될 항목 이름(예: "이름")
+  - `value` : 모델 필드와 연결 (`{view>name}`)
