Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -1,6 +1,6 @@
 # 11/03(화) 기록
 # chart 생성
-### `<viz:VizFrame>`
+### 1) `<viz:VizFrame>`
 - 차트를 그리는 핵심 컨트롤
 - `<Page>`나 `<Panel>` 안에 배치, 내부에 `<dataset>`와 `<feeds>` 포함
 - 속성:
@@ -10,7 +10,7 @@
   - `width/height` : 차트 크기 지정
 </br>
 
-### `<viz:dataset>` + `<FlattenedDataset>`
+### 2) `<viz:dataset>` + `<FlattenedDataset>`
 - 차트에 표시할 데이터 집합을 정의
 - 이 안에서 dimensions와 measures를 정의하여 차트에 어떤 데이터를 표시할지 결정
 - `<VizFrame>` 내부에 배치
@@ -18,7 +18,7 @@
   - `data="{view>/list}"` : JSONModel(view)의 list 배열 데이터를 바인딩
 </br>
 
-### `<viz.data:dimensions>`
+### 3-1) `<viz.data:dimensions>`
 - 차트의 범주(Category) 역할, X축이나 색상 구분에 사용
 - 여러 개 정의 가능, 도넛 차트에서는 색상을 구분하는 기준이 되기도 함
 - `<FlattenedDataset>` 안에 배치
