Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -25,3 +25,23 @@
 - 속성:
   - `name` : 차트에서 표시될 항목 이름(예: "이름")
   - `value` : 모델 필드와 연결 (`{view>name}`)
+</br>
+
+### 3-2) `<viz.data:measures>`
+- 차트의 값(Value) 역할, Y축 또는 크기에 사용
+- 여러 개 정의 가능, 도넛 차트에서는 조각의 크기를 결정
+- `<FlattenedDataset>` 안에 배치
+- 속성:
+  - `name` : 차트에서 표시될 값 이름(예: "숫자")
+  - `value` : 모델 필드와 연결 ({view>rate})
+ </br>
+
+### 4) `<viz:feeds>` + `<viz.feeds:FeedItem>`
+- 차트 데이터와 시각적 요소를 연결
+- 도넛/파이 차트는 color(조각 색상)와 size(조각 크기)
+- 막대/라인 차트는 CategoryAxi와 valueAxis 사용
+- `<VizFrame>` 내부에 배치
+- 속성:
+  - `uid` : 차트에서 피드 역할 지정 (color, size, categoryAxis, valueAxis 등)
+  - `type` : Dimension 또는 Measure 지정
+  - values : 매핑할 데이터 이름(Dimension/Measure에서 정의한 name)
