Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -44,4 +44,4 @@
 - 속성:
   - `uid` : 차트에서 피드 역할 지정 (color, size, categoryAxis, valueAxis 등)
   - `type` : Dimension 또는 Measure 지정
-  - values : 매핑할 데이터 이름(Dimension/Measure에서 정의한 name)
+  - `values` : 매핑할 데이터 이름(Dimension/Measure에서 정의한 name)
