Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -1,5 +1,5 @@
 # 11/03(화) 기록
-# chart 생성
+# chart 생성 - view 버전
 ### 1) `<viz:VizFrame>`
 - 차트를 그리는 핵심 컨트롤
 - `<Page>`나 `<Panel>` 안에 배치, 내부에 `<dataset>`와 `<feeds>` 포함
@@ -45,3 +45,8 @@
   - `uid` : 차트에서 피드 역할 지정 (color, size, categoryAxis, valueAxis 등)
   - `type` : Dimension 또는 Measure 지정
   - `values` : 매핑할 데이터 이름(Dimension/Measure에서 정의한 name)
+</br>
+
+---
+
+# chart 생성 - controller 버전
