Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -8,6 +8,22 @@
   - `vizProperties` : 제목, 레이블 등 차트 속성 설정
   - `uiConfig` : Fiori UI 스타일 적용
   - `width/height` : 차트 크기 지정
+```html
+<viz:VizFrame 
+    id="idViewChart"
+    width="300px"
+    height="300px"
+    vizType="donut"
+    uiConfig="{'applicationSet':'fiori'}"
+    vizProperties="{
+        title : { visible : true, text : 'My Chart' },
+        plotArea : {
+            drawingEffect: 'glowsy',
+            dataLabel: { visible: true },
+            colorPalette: ['#FAED7D', '#FFB2D9', '#FFC19E']
+        }
+    }">
+```
 </br>
 
 ### 2) `<viz:dataset>` + `<FlattenedDataset>`
@@ -50,3 +66,26 @@
 ---
 
 # chart 생성 - controller 버전
+### 1) FlattenedDataset
+- VizFrame(차트)에 바인딩할 데이터 구조 정의
+- `dimension` → X축 / 분류 기준 (예: 제품명)
+- `measures` → Y축 / 수치 값 (예: 매출, 수량)
+- `data.path` → 모델의 데이터 경로
+```java
+let oDataset = new FlattenedDataset({
+    dimensions: [
+        { name: "차원이름", value: "{모델명>필드명}" }
+    ],
+    measures: [
+        { name: "측정값이름", value: "{모델명>필드명}" }
+    ],
+    data: { path: "모델명>/데이터경로" }
+});
+```
+```java
+let oDataSet = new FlattenedDataset({
+    dimensions: [{ name: "Product", value: "{cont>product}" }],
+    measures: [{ name: "Amount", value: "{cont>amount}" }],
+    data: { path: "cont>/sales" }
+});
+```
