--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -32,6 +32,13 @@
 - `<VizFrame>` 내부에 배치
 - 속성:
   - `data="{view>/list}"` : JSONModel(view)의 list 배열 데이터를 바인딩
+```html
+<viz:dataset>
+    <viz.data:FlattenedDataset data="{view>/list}">
+        <!-- 차원/측정값 정의 -->
+    </viz.data:FlattenedDataset>
+</viz:dataset>
+```
 </br>
 
 ### 3-1) `<viz.data:dimensions>`
@@ -41,6 +48,13 @@
 - 속성:
   - `name` : 차트에서 표시될 항목 이름(예: "이름")
   - `value` : 모델 필드와 연결 (`{view>name}`)
+```html
+<viz.data:dimensions>
+    <viz.data:DimensionDefinition 
+        name="이름" 
+        value="{view>name}" />
+</viz.data:dimensions>
+```
 </br>
 
 ### 3-2) `<viz.data:measures>`
@@ -50,6 +64,13 @@
 - 속성:
   - `name` : 차트에서 표시될 값 이름(예: "숫자")
   - `value` : 모델 필드와 연결 ({view>rate})
+```html
+<viz.data:measures>
+    <viz.data:MeasureDefinition 
+        name="숫자" 
+        value="{view>rate}" />
+</viz.data:measures>
+```
  </br>
 
 ### 4) `<viz:feeds>` + `<viz.feeds:FeedItem>`
@@ -61,6 +82,18 @@
   - `uid` : 차트에서 피드 역할 지정 (color, size, categoryAxis, valueAxis 등)
   - `type` : Dimension 또는 Measure 지정
   - `values` : 매핑할 데이터 이름(Dimension/Measure에서 정의한 name)
+```html
+<viz:feeds>
+    <viz.feeds:FeedItem 
+        uid="color" 
+        type="Dimension" 
+        values="이름" />
+    <viz.feeds:FeedItem 
+        uid="size" 
+        type="Measure" 
+        values="숫자" />
+</viz:feeds>
+```
 </br>
 
 ---
