Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -122,3 +122,15 @@ let oDataSet = new FlattenedDataset({
     data: { path: "cont>/sales" }
 });
 ```
+</br>
+
+### 2) FeedItem
+- VizFrame 차트에서 데이터와 시각적 요소(축, 색상 등) 를 연결하는 역할
+- FeedItem 여러 개를 추가할 수 있음
+```java
+let oFeed = new FeedItem({
+    uid: "feed유형",      // 예: valueAxis, categoryAxis, color, size
+    type: "Dimension" or "Measure",
+    values: ["데이터이름"]
+});
+```
