Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -116,11 +116,15 @@ let oDataset = new FlattenedDataset({
 });
 ```
 ```java
+let oChart = this.byId("idControllerChart");
+
+// dataset 만들기
 let oDataSet = new FlattenedDataset({
-    dimensions: [{ name: "Product", value: "{cont>product}" }],
-    measures: [{ name: "Amount", value: "{cont>amount}" }],
-    data: { path: "cont>/sales" }
+    dimension: [{ name : "Product", value : "{cont>product}" }],
+    measures: [{ name : "Amount", value : "{cont>amount}" }],
+    data: { path : "cont>/sales" }
 });
+oChart.setDataSet(oDataSet);
 ```
 </br>
 
@@ -133,4 +137,19 @@ let oFeed = new FeedItem({
     type: "Dimension" or "Measure",
     values: ["데이터이름"]
 });
+```
+```java
+let feedValueAxis = new FeedItem({
+    uid: "valueAxis",
+    type: "Measure",
+    values: ["Amount"]
+});
+let feedCategoryAxis = new FeedItem({
+    uid: "CategoryAxis",
+    type: "Dimension",
+    values: ["Product"]
+});
+
+oChart.addFeed(feedValueAxis);
+oChart.addFeed(feedCategoryAxis);
 ```
