Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -120,7 +120,7 @@ let oChart = this.byId("idControllerChart");
 
 // dataset 만들기
 let oDataSet = new FlattenedDataset({
-    dimension: [{ name : "Product", value : "{cont>product}" }],
+    dimensions: [{ name : "Product", value : "{cont>product}" }],
     measures: [{ name : "Amount", value : "{cont>amount}" }],
     data: { path : "cont>/sales" }
 });
