Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -124,7 +124,7 @@ let oDataSet = new FlattenedDataset({
     measures: [{ name : "Amount", value : "{cont>amount}" }],
     data: { path : "cont>/sales" }
 });
-oChart.setDataSet(oDataSet);
+oChart.setDataset(oDataSet);
 ```
 </br>
 
@@ -145,11 +145,16 @@ let feedValueAxis = new FeedItem({
     values: ["Amount"]
 });
 let feedCategoryAxis = new FeedItem({
-    uid: "CategoryAxis",
+    uid: "categoryAxis",
     type: "Dimension",
     values: ["Product"]
 });
 
 oChart.addFeed(feedValueAxis);
 oChart.addFeed(feedCategoryAxis);
+
+oChart.setVizProperties({
+    title: { test : '막대차트', visible : true }
+})
+oChart.setVizType("line");
 ```
