--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -158,3 +158,72 @@ oChart.setVizProperties({
 })
 oChart.setVizType("line");
 ```
+</br>
+</br>
+
+### ODataModel.read() 정리
+
+### 1) 기본 형식
+- 경로의 데이터를 읽고 성공하면 success 실행, 실패하면 error 실행
+- sPath : 읽을 대상의 경로 (엔티티셋 또는 키값 포함 경로)
+- success : 요청 성공 시 실행되는 콜백 함수
+- error : 요청 실패 시 실행되는 콜백 함수
+```java
+oModel.read(sPath, {
+  success: function(oData, response) {},
+  error: function(oError) {}
+});
+```
+</br>
+
+### 2) 단일 데이터 (Key 기반 조회)
+- OData의 특정 레코드를 가져올 때는 엔티티셋 이름 뒤에 키 필드들을 괄호 안에 지정
+```java
+oModel.read("/esConDetailSet(Carrid='AA',Connid='0017')", {
+  success: function(oReturn) {
+    console.log(oReturn);
+  }
+});
+```
+- oReturn 결과 예시
+```java
+{
+  Carrid: "AA",
+  Connid: "0017",
+  Airpto: "ICN"
+}
+```
+</br>
+
+### 3) 여러 건 (전체 조회)
+- 키값 없이 엔티티셋만 지정하면 전체 데이터를 읽음
+```java
+oModel.read("/esConDetailSet", {
+  success: function(oReturn) {
+    console.log(oReturn.results);
+  }
+});
+```
+- 결과 데이터 구조
+```java
+{
+  results: [
+    { Carrid: "AA", Connid: "0017", Airpto: "ICN" },
+    { Carrid: "LH", Connid: "0400", Airpto: "FRA" }
+  ]
+}
+```
+</br>
+
+### 4) 조건 조회 (Filter 사용)
+- 특정 조건만 조회하고 싶을 때는 filters 옵션을 사용
+```java
+oModel.read("/esConDetailSet", {
+  filters: [
+    new sap.ui.model.Filter("Carrid", "EQ", "AA")
+  ],
+  success: function(oData) {
+    console.log(oData.results);
+  }
+});
+```
