Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -227,3 +227,25 @@ oModel.read("/esConDetailSet", {
   }
 });
 ```
+</br>
+
+### setProperty 헷갈리는 부분
+- 초기 상태
+```java
+let oModel = new JSONModel({
+  data: [
+    { name: "A" },
+    { name: "B" }
+  ]
+});
+```
+- 이때 이렇게 하면
+```java
+oModel.setProperty("/data", { name: "C" });
+```
+- 결과
+```java
+{
+  data: { name: "C" }   // 배열이었던 부분이 객체로 바뀜
+}
+```
