Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -193,6 +193,30 @@ oModel.read("/esConDetailSet(Carrid='AA',Connid='0017')", {
   Airpto: "ICN"
 }
 ```
+- 실습 예제
+```java
+onSelectionChange: function() {
+    let table = this.byId("idesConListSet");  
+    let oRow = table.getSelectedItem();     
+    let oBindingContext = oRow.getBindingContext("local");
+    let sPath = oBindingContext.getPath();
+
+    let oModel = this.getView().getModel("local");
+    let inputCarrid = oModel.getProperty(sPath).Carrid;  
+    let inputConnid = oModel.getProperty(sPath).Connid; 
+    
+    let aModel = this.getView().getModel("aModel");
+    
+    oModel.read(`/esConDetailSet(Carrid='${inputCarrid}',Connid='${inputConnid}')`, {            
+        success: function(oReturn) {
+            aModel.setProperty("/data", [{ Airpto: oReturn.Airpto }]);
+        },
+        error: function() {
+            
+        }
+    });
+}
+```
 </br>
 
 ### 3) 여러 건 (전체 조회)
