Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -176,8 +176,26 @@ oModel.read(sPath, {
 ```
 </br>
 
-### 2) 단일 데이터 (Key 기반 조회)
-- OData의 특정 레코드를 가져올 때는 엔티티셋 이름 뒤에 키 필드들을 괄호 안에 지정
+### 2) 단일 데이터 (단일 Key 조회)
+- Products(1) → Products 엔티티셋에서 ProductID = 1인 레코드 조회
+- 조회 결과는 단일 객체(oReturn)로 반환
+- 배열이 아니라 단일 객체이므로 바로 oReturn.Property 사용 가능
+```java
+oModel.read("/Products(1)", {  // ProductID가 1인 단건 조회
+    success: function(oReturn){
+        console.log(oReturn.ProductName); // 조회된 데이터 사용
+    },
+    error: function(err){
+        console.error(err);
+    }
+});
+```
+</br>
+
+### 3) 단일 데이터 (복합 Key 조회)
+- Key가 여러 개일 경우 (Key1='값1',Key2='값2') 형태
+- 선택된 항목을 기반으로 특정 행 단건 조회 가능
+- `"/EntitySetName(Key1='값',Key2='값')"`
 ```java
 oModel.read("/esConDetailSet(Carrid='AA',Connid='0017')", {
   success: function(oReturn) {
@@ -219,7 +237,7 @@ onSelectionChange: function() {
 ```
 </br>
 
-### 3) 여러 건 (전체 조회)
+### 4) 여러 건 (전체 조회)
 - 키값 없이 엔티티셋만 지정하면 전체 데이터를 읽음
 ```java
 oModel.read("/esConDetailSet", {
