Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -190,6 +190,13 @@ oModel.read("/Products(1)", {  // ProductID가 1인 단건 조회
     }
 });
 ```
+```java
+oModel.read("/esConDetailSet(Carrid='AA')", {
+    success: function(oReturn) {
+        console.log(oReturn); // 단일 객체
+    }
+});
+```
 </br>
 
 ### 3) 단일 데이터 (복합 Key 조회)
