Update 웹 UI 프레임워크를 활용한 개발 (11.04).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (11.04).md
@@ -60,6 +60,7 @@
 ### 3-2) `<viz.data:measures>`
 - 차트의 값(Value) 역할, Y축 또는 크기에 사용
 - 여러 개 정의 가능, 도넛 차트에서는 조각의 크기를 결정
+- 숫자 여러개 표시하고 싶을 때 Measure 추가
 - `<FlattenedDataset>` 안에 배치
 - 속성:
   - `name` : 차트에서 표시될 값 이름(예: "숫자")
