Update 실습 (UX401 기초 다지기).md

--- a/HTML_Javascript/실습 (UX401 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX401 기초 다지기).md
@@ -8,28 +8,45 @@ sap.ui.define([
 
     return Controller.extend("sap.btp.ux410solving.controller.Detail", {
         onInit() {
+            // 라우터 객체 가져오기 (Component에 정의된 Router)
             const oRouter = this.getOwnerComponent().getRouter();
+
+            // "RouteDetail" 경로가 매칭될 때 실행될 함수 등록
             oRouter.getRoute("RouteDetail").attachPatternMatched(this.RoutePatternMatched, this);
         },
+
+        // Route가 매칭될 때 실행되는 함수
         RoutePatternMatched: function(oEvent) {
-            let sParam1 = oEvent.getParameters().arguments.param1;
-            let sParam2 = oEvent.getParameters().arguments.param2;
+            // 라우트 파라미터(param1, param2) 가져오기
+            let sParam1 = oEvent.getParameters().arguments.param1;   // OrderID
+            let sParam2 = oEvent.getParameters().arguments.param2;   // ProductID
+
+            // 메인 OData 모델 가져오기
             let oModel = this.getOwnerComponent().getModel();
+
+            // 결과 데이터를 담을 JSON 모델 생성
             let resultModel = new JSONModel();
+
+            // this 참조를 유지하기 위한 변수
             let that = this;
 
-            oModel.read(`/Order_Details(OrderID=${sParam1},ProductID=${sParam2})`, {           // 숫자면 '' 안하기      
+            // OData에서 특정 Order_Details 데이터 읽기
+            oModel.read(`/Order_Details(OrderID=${sParam1},ProductID=${sParam2})`, { // 숫자 파라미터일 경우 작은따옴표('') 없이 전달
                 success: function(oReturn) {
+                    // 읽은 데이터를 resultModel에 세팅
                     resultModel.setData(oReturn); 
+
+                    // View에 resultModel을 "resultModel" 이름으로 설정
                     that.getView().setModel(resultModel, "resultModel");
 
+                    // ObjectPageLayout 컨트롤에 바인딩 (데이터 표시)
                     that.byId("ObjectPageLayout").bindElement({
                         path: "/",
                         model: "resultModel"
                     });
                 },
                 error: function() {
-                    
+                    // 데이터 읽기 실패 시 처리 (현재는 비워둠)
                 }
             });
         }
@@ -38,6 +55,7 @@ sap.ui.define([
 ```
 </br>
 
+- Main.js
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
@@ -50,9 +68,11 @@ sap.ui.define([
 
     return Controller.extend("sap.btp.ux410solving.controller.Main", {
         onInit() {
+            // 메인 모델(Component에 설정된 모델)을 View에 설정
             let oModel = this.getOwnerComponent().getModel();
             this.getView().setModel(oModel);
 
+            // 차트 타입 목록을 담은 JSON 모델 생성
             let tModel = new JSONModel({
                 Key: [
                     {type : "bar"},
@@ -61,11 +81,12 @@ sap.ui.define([
                     {type : "donut"}
                 ]
             });
-
-
             
+            // "typeList"라는 이름으로 View에 모델 설정
             this.getView().setModel(tModel, "typeList");
         },
+
+        // 차트 데이터 클릭 시 상세 페이지로 이동
         OnselectData: function(oEvent) {
             let sRouter = this.getOwnerComponent().getRouter();
             console.log(oEvent);
@@ -73,48 +94,49 @@ sap.ui.define([
             let sOrderID = aSelectedData[0].data.OrderID;
             let sProductID = aSelectedData[0].data.ProductID;
             
+            // 선택한 OrderID, ProductID를 라우트 파라미터로 전달
             sRouter.navTo("RouteDetail", {
                 param1 : sOrderID,
                 param2 : sProductID
             }, false);
         },
+
+        // 검색 버튼 클릭 시 실행되는 함수
         onSearch: function() {
-            //debugger;
-            //oChart.setVizType("donut");
-            //debugger;
             let selectOrderID = this.byId("idOrderID");  
             let oRow = selectOrderID.getSelectedItem();    
-            let oChart = this.byId("idViewChart");          // 차트 가져오기   
+            let oChart = this.byId("idViewChart");          // 차트 객체 가져오기   
 
-            if(oRow==null) {        // OrderID 입력 안했을 때
+            if(oRow == null) {        // OrderID를 선택하지 않았을 때
                 let selectidType = this.byId("idType");  
                 let typeRow = selectidType.getSelectedItem();
                 let typeBindingContext = typeRow.getBindingContext("typeList");
-                let typePath = typeBindingContext.getPath();        // 입력 Type 경로 가져오기
+                let typePath = typeBindingContext.getPath();        // 선택한 Type의 경로 가져오기
 
                 let tModel = this.getView().getModel("typeList");
-                let inputtype = tModel.getProperty(typePath).type;   // 입력 type 값 가져오기
+                let inputtype = tModel.getProperty(typePath).type;   // 선택한 Type 값 가져오기
 
                 oChart.setVizType(inputtype);       // 차트 타입 설정
             }
-            else {                  // OrderID 입력 했을 때
+            else {                  // OrderID를 선택했을 때
                 let oBindingContext = oRow.getBindingContext();
-                let sPath = oBindingContext.getPath();  // 입력 OrderID 경로 가져오기
+                let sPath = oBindingContext.getPath();  // 선택한 OrderID의 경로 가져오기
 
                 let selectidType = this.byId("idType");  
                 let typeRow = selectidType.getSelectedItem();
                 let typeBindingContext = typeRow.getBindingContext("typeList");
-                let typePath = typeBindingContext.getPath();        // 입력 Type 경로 가져오기
+                let typePath = typeBindingContext.getPath();        // 선택한 Type의 경로 가져오기
 
                 let oModel = this.getOwnerComponent().getModel();
-                let inputOrderID = oModel.getProperty(sPath).OrderID;   // 입력 OrderID 값 가져오기
+                let inputOrderID = oModel.getProperty(sPath).OrderID;   // 선택한 OrderID 값 가져오기
                 let tModel = this.getView().getModel("typeList");
-                let inputtype = tModel.getProperty(typePath).type;   // 입력 type 값 가져오기
+                let inputtype = tModel.getProperty(typePath).type;   // 선택한 Type 값 가져오기
 
                 let oFilter = [];  
-                let idFlattenedDataset_object = this.byId("idFlattenedDataset");    // FlattenedDataset 객체를 가져옴
-                let fBindingContext = idFlattenedDataset_object.getBinding("data"); // data 프로퍼티 바인딩 정보를 얻음
+                let idFlattenedDataset_object = this.byId("idFlattenedDataset");    // FlattenedDataset 객체 가져오기
+                let fBindingContext = idFlattenedDataset_object.getBinding("data"); // data 프로퍼티의 바인딩 정보 가져오기
 
+                // OrderID로 필터 생성
                 oFilter.push(new Filter({
                     path: "OrderID",
                     operator: FilterOperator.EQ,
@@ -125,16 +147,19 @@ sap.ui.define([
                 oChart.setVizType(inputtype);       // 차트 타입 설정
             }
         },
+
+        // 차트 타입 입력값 변경 시 유효성 검사
         onChange: function(oEvent) {
             let iValue = oEvent.getParameter("value");
             let oInput = oEvent.getSource();
 
-            if((iValue!=="bar") && (iValue!=="column") && (iValue!=="line") && (iValue!=="donut")) {
+            // 유효하지 않은 타입 입력 시 오류 상태로 표시
+            if((iValue !== "bar") && (iValue !== "column") && (iValue !== "line") && (iValue !== "donut")) {
                 oInput.setValueState("Error");
-                oInput.setValueStateText("Invalid entry");
+                oInput.setValueStateText("유효하지 않은 입력값입니다");
             }
             else {
-                oInput.setValueState(ValueState.None);
+                oInput.setValueState(ValueState.None); // 정상 입력 시 상태 초기화
             }
         }
     });
