--- a/HTML_Javascript/코드 개선포인트.md
+++ b/HTML_Javascript/코드 개선포인트.md
@@ -27,3 +27,6 @@ else if(inputCityTo) {     // CountryFrom 입력 들어올 때
 }
 oFilters.push(new Filter({ path: 'Connid', operator: 'Contains', value1: inputConnectionID }));
 ```
+</br>
+
+### 2) 처음 dialog 창 콤보박스로 바꾸기
