--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -6,3 +6,7 @@
 3) Application Toolbar (어플리케이션 툴바)
 - 프로그램 기능 버튼들이 위치하는 영역
 <img width="449" height="351" alt="image" src="https://github.com/user-attachments/assets/f5e856f1-5b5a-41d9-86cb-1703765a4849" />
+</br>
+</br>
+
+### TCODE / 명령어
