--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -10,3 +10,10 @@
 </br>
 
 ### TCODE / 명령어
+- `/N` : 현재 TCODE 정료
+- `/NXXXX` : 현재 창에서 TCODE 종료
+- `/ON` : 새창 열기
+- `/OXXXX` : 새창열고 TCODE 실행
+- `/ne` : 모든 창닫고 로그오프
+- `/nend` : 팝업으로 확인 후 닫고 로그오프
+- `/i` : 현재 화면 닫기
