--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -17,3 +17,14 @@
 - `/ne` : 모든 창닫고 로그오프
 - `/nend` : 팝업으로 확인 후 닫고 로그오프
 - `/i` : 현재 화면 닫기
+</br>
+
+### SAP Input Help
+- 특정 입력 필드에서 값 목록을 보여주는 기능을 총칭
+- 모두 같은 개념으로 F4 키를 누르면 뜨는 팝업
+- 1) Search Help
+  2) Value Help
+  3) Possible Entry
+  4) F4 Help
+  5) Input Help
+</br>
