Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -28,3 +28,14 @@
   4) F4 Help
   5) Input Help
 </br>
+
+### ABAP 기본 개념
+- SAP 시스템에서 사용하는 프로그래밍 언어
+- 초기에는 COBOL 기반의 절차지향 언어, 이후 객체지향(OOP) 기능 추가
+- 소문자 구분 없음 → 내부적으로는 대문자로 처리
+- 단, 문자열(‘HQ0’) 내부의 값은 자동 대문자 변환이 되지 않음 → 직접 대문자로 입력해야 함
+- 옵션을 통해 소문자 값 전달도 가능
+</br>
+
+### SAP ERP란?
+- 기업의 다양한 데이터와 프로세스를 통합하여 관리하는 시스템
