Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -39,3 +39,12 @@
 
 ### SAP ERP란?
 - 기업의 다양한 데이터와 프로세스를 통합하여 관리하는 시스템
+</br>
+
+### SAP 주요 모듈
+- FI(financial accounting) : 재무회계 관리를 위한 모듈. 회사 데이터 처리와 재무 보고서 작성
+-	CO(controlling) : 내부 회계 및 경영 회계를 관리, 비용관리/수익성분석/예산처리
+-	MM (matrials managements) : 자재 관리하는 모듈, 구매/입고/조회를 관리함
+-	PP(product planning) : 제조 및 생산과정을 관리하고 계획
+-	SD(sales and distribution) : 판매와 유통관리를 위한 모듈, 주문/배송/물류 관리
+-	HR(Human Resource) : 인사관리를 위한 모듈. 인사정보/급여. 교육관리
