Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -48,3 +48,14 @@
 -	PP(product planning) : 제조 및 생산과정을 관리하고 계획
 -	SD(sales and distribution) : 판매와 유통관리를 위한 모듈, 주문/배송/물류 관리
 -	HR(Human Resource) : 인사관리를 위한 모듈. 인사정보/급여. 교육관리
+</br>
+
+### SAP 시스템 버전
+1) SAP ECC (ERP Central Component)
+- 기존 SAP Business Suite의 핵심 ERP
+- R/3 기반 ERP 시스템
+
+2)SAP S/4 HANA (2015~)
+- SAP의 최신 ERP 제품
+- In-Memory DB인 SAP HANA 기반으로 성능 대폭 향상
+- 실시간 분석 및 처리 가능
