--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -3,7 +3,7 @@
 - TCODE(트랜잭션 코드) 입력하는 칸
 2. Title Bar (타이틀바)
 - 현재 화면의 제목 표시
-3) Application Toolbar (어플리케이션 툴바)
+3. Application Toolbar (어플리케이션 툴바)
 - 프로그램 기능 버튼들이 위치하는 영역
 </br>
 
@@ -53,10 +53,10 @@
 </br>
 
 ### SAP 시스템 버전
-1) SAP ECC (ERP Central Component)
+1. SAP ECC (ERP Central Component)
 - 기존 SAP Business Suite의 핵심 ERP
 - R/3 기반 ERP 시스템
-2) SAP S/4 HANA (2015~)
+2. SAP S/4 HANA (2015~)
 - SAP의 최신 ERP 제품
 - In-Memory DB인 SAP HANA 기반으로 성능 대폭 향상
 - 실시간 분석 및 처리 가능
