--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -61,3 +61,18 @@
 - SAP의 최신 ERP 제품
 - In-Memory DB인 SAP HANA 기반으로 성능 대폭 향상
 - 실시간 분석 및 처리 가능
+</br>
+
+### SAP 3-Tier 구조
+1) Presentation Layer (프레젠테이션 계층)
+- 사용자가 SAP를 사용하는 화면(UI)
+- SAP GUI, 웹(Fiori) 등이 해당
+
+2️) Application Layer (애플리케이션 계층)
+- ABAP 프로그램이 실행되는 계층
+- 비즈니스 로직 처리 (주문 생성, 재고 계산 등)\
+- Presentation ↔ Database 사이에서 중간 역할
+
+3️) Database Layer (데이터베이스 계층)
+- 모든 SAP 데이터를 저장하는 곳
+- HANA, Oracle 등 DBMS 사용
