Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -68,11 +68,11 @@
 - 사용자가 SAP를 사용하는 화면(UI)
 - SAP GUI, 웹(Fiori) 등이 해당
 
-2️) Application Layer (애플리케이션 계층)
+2) Application Layer (애플리케이션 계층)
 - ABAP 프로그램이 실행되는 계층
 - 비즈니스 로직 처리 (주문 생성, 재고 계산 등)\
 - Presentation ↔ Database 사이에서 중간 역할
 
-3️) Database Layer (데이터베이스 계층)
+3) Database Layer (데이터베이스 계층)
 - 모든 SAP 데이터를 저장하는 곳
 - HANA, Oracle 등 DBMS 사용
