Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -70,7 +70,7 @@
 
 2) Application Layer (애플리케이션 계층)
 - ABAP 프로그램이 실행되는 계층
-- 비즈니스 로직 처리 (주문 생성, 재고 계산 등)\
+- 비즈니스 로직 처리 (주문 생성, 재고 계산 등)
 - Presentation ↔ Database 사이에서 중간 역할
 
 3) Database Layer (데이터베이스 계층)
