Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -76,3 +76,13 @@
 3) Database Layer (데이터베이스 계층)
 - 모든 SAP 데이터를 저장하는 곳
 - HANA, Oracle 등 DBMS 사용
+</br>
+
+### SAP Client 구성
+- SAP는 여러 Client를 두어 데이터를 독립적으로 관리
+- 일반 Client 번호 예시:
+  - 100 : 개발(DEV)
+  - 200 : 품질(QAS)
+  - 300 : 운영(PRD)
+- Cross-Client(800번): 개발·품질 공용 설정, 클라이언트 구분 없이 적용
+</br>
