--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -87,3 +87,22 @@
   - 300 : 운영(PRD)
 - Cross-Client(800번): 개발·품질 공용 설정, 클라이언트 구분 없이 적용
 </br>
+
+### SAP Object 종류
+- Standard Object: SAP에서 제공하는 기본 오브젝트(프로그램, 테이블 등)
+- CBO (Customer Bolt-On): 고객사 개발 오브젝트(프로그램, 테이블, 기타)
+</br>
+
+### 패키지 종류
+1) Local Package ($TMP)
+- 개인 계정용, 이관 불가
+2) Transportable Package
+- 개발 완료 후 다른 서버로 이관 가능
+</br>
+
+
+Package vs Local Object
+
+Package → 이관 대상 Object
+
+Local Object → Local Package, 이관 대상 아님
