--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -98,11 +98,6 @@
 - 개인 계정용, 이관 불가
 2) Transportable Package
 - 개발 완료 후 다른 서버로 이관 가능
-</br>
-
-
-Package vs Local Object
-
-Package → 이관 대상 Object
-
-Local Object → Local Package, 이관 대상 아님
+3) Package vs Local Object
+- Package → 이관 대상 Object
+- Local Object → Local Package, 이관 대상 아님
