Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -110,4 +110,19 @@
    
    - Package → 이관 대상 Object
    - Local Object → Local Package, 이관 대상 아님
+</br>
+
+### SAP 주요 개발 툴 (T-Code)
+- SAP 개발 시 자주 사용하는 트랜잭션 코드(T-Code)와 기능 정리
+
+| T-Code | 기능 |
+|--------|-------|
+| **SE51** | Screen Painter (화면 개발) |
+| **SE41** | Menu Painter (메뉴 개발) |
+| **SE38** | ABAP Editor (프로그램 작성) |
+| **SE37** | Function Builder (함수 모듈 개발) |
+| **SE24** | Class Builder (클래스 개발) |
+| **SE11** | ABAP Dictionary – **가장 중요** (테이블, 도메인, 뷰 등 데이터 정의) |
+| **SE80** | Object Navigator (ABAP Workbench) – **가장 중요**, 오브젝트 통합 관리 |
+
 
