Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -98,18 +98,16 @@
 - CBO (Customer Bolt-On): 고객사 개발 오브젝트(프로그램, 테이블, 기타)
 </br>
 
-### 패키지 종류
-1) Local Package ($TMP)
+### 패키지(Package)와 로컬 객체(Local Object)
+1) Package
    
-   - 개인 계정용, 이관 불가
+   - 이관 대상 Object를 담는 패키지
+   - 개발 완료 후 다른 서버(QAS, PRD)로 이관 가능
 
-2) Transportable Package
+2) Local Object ($TMP)
    
-   - 개발 완료 후 다른 서버로 이관 가능
-3) Package vs Local Object
-   
-   - Package → 이관 대상 Object
-   - Local Object → Local Package, 이관 대상 아님
+   - 개인 계정에서 사용하는 임시 패키지
+   - 이관 불가, 개인 테스트용
 </br>
 
 ### SAP 주요 개발 툴 (T-Code)
@@ -125,4 +123,14 @@
 | **SE11** | ABAP Dictionary – **가장 중요** (테이블, 도메인, 뷰 등 데이터 정의) |
 | **SE80** | Object Navigator (ABAP Workbench) – **가장 중요**, 오브젝트 통합 관리 |
 
+</br>
 
+#### Transport(이관) 흐름
+- 개발 → 품질 → 운영 순으로 안전하게 이동
+
+| 흐름 | 설명 | 도구 |
+|------|------|------|
+| 개발(DEV) → 품질(QAS) | 개발 완료 후 기능 검증 | CTS (Change and Transport System) |
+| 품질(QAS) → 운영(PRD) | 테스트 완료 후 실제 업무 환경 적용 | CTS |
+
+**Tip:** STMS(Transaction Management System)에서 **안쪽 오브젝트부터 순서대로 릴리즈** 후 이관
