Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -127,10 +127,10 @@
 
 #### Transport(이관) 흐름
 - 개발 → 품질 → 운영 순으로 안전하게 이동
+- **Tip:** STMS(Transaction Management System)에서 **안쪽 오브젝트부터 순서대로 릴리즈** 후 이관
 
 | 흐름 | 설명 | 도구 |
 |------|------|------|
 | 개발(DEV) → 품질(QAS) | 개발 완료 후 기능 검증 | CTS (Change and Transport System) |
 | 품질(QAS) → 운영(PRD) | 테스트 완료 후 실제 업무 환경 적용 | CTS |
 
-**Tip:** STMS(Transaction Management System)에서 **안쪽 오브젝트부터 순서대로 릴리즈** 후 이관
