--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -135,4 +135,7 @@
 | 품질(QAS) → 운영(PRD) | 테스트 완료 후 실제 업무 환경 적용 | CTS |
 </br>
 
-##
+### CBO(Customer Bolt-On) 네이밍 규칙
+- SAP에서 새로 개발하는 오브젝트는 Z 또는 Y로 시작
+  - Z: 일반 커스텀 오브젝트
+  - Y: 회사 내부 표준 오브젝트
