--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -144,3 +144,12 @@
   
   - 패키지: ZPACB##_01
   - 프로그램: /OSE09, /NSE09
+</br>
+
+### ABAP 프로그램 유형
+- SAP에서 자주 사용하는 ABAP 프로그램 유형(Type)과 특징 정리
+
+| Type | 용도 | 특징 |
+|------|------|------|
+| **1 (Report Program)** | 조회용(R) | 데이터를 조회하고 리포트 출력 (R 기능) |
+| **M (Screen Program)** | 화면 기반 CRUD | 생성, 조회, 수정, 삭제 기능 가능 |
