Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -160,4 +160,8 @@
 
 ### ABAP 기본 문법
 
-**주석**
+**< 주석 >**
+1) `" 주석`
+   - 쌍따옴표 뒤에 오는 내용은 해당 위치부터 끝까지 주석
+   - `Ctrl + <` : 주석 처리
+   - `Ctrl + >` : 주석 해제
