Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -166,3 +166,6 @@
    - 쌍따옴표 뒤에 오는 내용은 해당 위치부터 끝까지 주석
    - `Ctrl + <` : 주석 처리
    - `Ctrl + >` : 주석 해제
+2) `* 주석`
+   
+   - 한 줄 전체 주석, 반드시 맨 앞에 * 가 있어야 함
