Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -133,6 +133,8 @@
 |------|------|------|
 | 개발(DEV) → 품질(QAS) | 개발 완료 후 기능 검증 | CTS (Change and Transport System) |
 | 품질(QAS) → 운영(PRD) | 테스트 완료 후 실제 업무 환경 적용 | CTS |
+<img width="451" height="231" alt="image" src="https://github.com/user-attachments/assets/da843ad7-23e0-42f0-ae7e-474d71d2361f" />
+
 </br>
 
 ### CBO(Customer Bolt-On) 네이밍 규칙
