--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -162,6 +162,10 @@
 </br>
 
 ### ABAP 기본 문법
+- 모든 문장은 마지막에 마침표(.)
+- 문자열은 반드시 홑따옴표 `' '` 사용
+  
+  - `" "`(쌍따옴표)는 문자열 아님 → 주석
 
 **< 주석 >**
 1) `" 주석`
