Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -177,3 +177,13 @@
 2) `* 주석`
    
    - 한 줄 전체 주석, 반드시 맨 앞에 * 가 있어야 함
+
+**< PARAMETERS >**
+- 사용자로부터 입력값을 받기 위한 키워드
+```abap
+PARAMETERS <변수명> TYPE <데이터타입>.
+```
+```abap
+PARAMETERS pa_name TYPE string.  " 문자열 입력값 받음
+PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
+```
