Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -168,18 +168,6 @@
   - `" "`(쌍따옴표)는 문자열 아님 → 주석
 </br>
 
-### < 주석 >
-1) `" 주석`
-   
-   - 쌍따옴표 뒤에 오는 내용은 해당 위치부터 끝까지 주석
-   - `Ctrl + <` : 주석 처리
-   - `Ctrl + >` : 주석 해제
-2) `* 주석`
-   
-   - 한 줄 전체 주석, 반드시 맨 앞에 * 가 있어야 함
-</br>
-
-### < ABAP 코드 문법 >
 **1) PARAMETERS**
 - 사용자로부터 입력값을 받기 위한 키워드
 ```abap
@@ -189,3 +177,68 @@ PARAMETERS <변수명> TYPE <데이터타입>.
 PARAMETERS pa_name TYPE string.  " 문자열 입력값 받음
 PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
 ```
+</br>
+
+WRITE
+
+화면에 값을 출력하는 키워드
+
+문법: WRITE <값>. 또는 WRITE: <값1>, <값2>.
+
+예시:
+
+WRITE 'Hello World!'.       " 문자열 출력
+WRITE: 'Hello', pa_name.    " 문자열과 변수 값 함께 출력
+WRITE: 'YOUR input: ', pa_num.
+WRITE: 'Result: ', gv_result.
+
+3. NEW-LINE
+
+화면 출력 시 줄바꿈
+
+예시:
+
+NEW-LINE.
+
+4. DATA
+
+변수를 선언하는 키워드
+
+문법: DATA <변수명> TYPE <데이터타입>.
+
+예시:
+
+DATA gv_result TYPE I.  " 정수형 변수 선언
+
+5. MOVE
+
+값을 다른 변수에 할당
+
+문법: MOVE <원본> TO <대상>.
+
+예시:
+
+MOVE pa_num TO gv_result.  " pa_num 값을 gv_result에 복사
+
+6. ADD
+
+산술 연산으로 값을 더함
+
+문법: ADD <숫자/변수> TO <변수>.
+
+예시:
+
+ADD 1 TO gv_result.  " gv_result에 1 더하기
+
+7. 주석(Comment)
+
+`" 또는 * 사용
+
+`" : 한 줄의 끝까지 주석
+
+* : 라인 맨 앞에 쓰면 전체 라인을 주석 처리
+
+예시:
+
+PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
+DATA gv_result TYPE I.    " 변수 선언
