Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -179,18 +179,18 @@ PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
 ```
 </br>
 
-WRITE
-
-화면에 값을 출력하는 키워드
-
-문법: WRITE <값>. 또는 WRITE: <값1>, <값2>.
-
-예시:
-
+**2) WRITE**
+- 화면에 값을 출력하는 키워드
+```abap
+WRITE <값>. 또는 WRITE: <값1>, <값2>.
+```
+```abap
 WRITE 'Hello World!'.       " 문자열 출력
 WRITE: 'Hello', pa_name.    " 문자열과 변수 값 함께 출력
 WRITE: 'YOUR input: ', pa_num.
 WRITE: 'Result: ', gv_result.
+```
+</br>
 
 3. NEW-LINE
 
