Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -192,40 +192,38 @@ WRITE: 'Result: ', gv_result.
 ```
 </br>
 
-3. NEW-LINE
-
-화면 출력 시 줄바꿈
-
-예시:
-
+**3) NEW-LINE**
+- 화면 출력 시 줄바꿈
+```abap
 NEW-LINE.
+```
+</br>
 
-4. DATA
-
-변수를 선언하는 키워드
-
-문법: DATA <변수명> TYPE <데이터타입>.
-
-예시:
-
+**4) DATA**
+- 변수를 선언하는 키워드
+```abap
+DATA <변수명> TYPE <데이터타입>.
+```
+```abap
 DATA gv_result TYPE I.  " 정수형 변수 선언
+```
+</br>
 
-5. MOVE
-
-값을 다른 변수에 할당
-
-문법: MOVE <원본> TO <대상>.
-
-예시:
-
+**5) MOVE**
+- 값을 다른 변수에 할당
+```abap
+MOVE <원본> TO <대상>.
+```
+```abap
 MOVE pa_num TO gv_result.  " pa_num 값을 gv_result에 복사
+```
+</br>
 
-6. ADD
-
-산술 연산으로 값을 더함
-
-문법: ADD <숫자/변수> TO <변수>.
-
+**6) ADD**
+- 산술 연산으로 값을 더함
+```abap
+ADD <숫자/변수> TO <변수>.
+```
 예시:
 
 ADD 1 TO gv_result.  " gv_result에 1 더하기
