Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -224,14 +224,13 @@ MOVE pa_num TO gv_result.  " pa_num 값을 gv_result에 복사
 ```abap
 ADD <숫자/변수> TO <변수>.
 ```
-````abap
+```abap
 ADD 1 TO gv_result.  " gv_result에 1 더하기
 ```
 </br>
 
 **7) 주석(Comment)**
-
-`" 또는 * 사용
+- `"` 또는 `*` 사용
 
 `" : 한 줄의 끝까지 주석
 
