Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -231,10 +231,10 @@ ADD 1 TO gv_result.  " gv_result에 1 더하기
 
 **7) 주석(Comment)**
 - `"` 또는 `*` 사용
+  
   - `"` : 한 줄의 끝까지 주석
   - `*` : 라인 맨 앞에 쓰면 전체 라인을 주석 처리
-
-예시:
-
+```abap
 PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
 DATA gv_result TYPE I.    " 변수 선언
+```
