Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -238,3 +238,36 @@ ADD 1 TO gv_result.  " gv_result에 1 더하기
 PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
 DATA gv_result TYPE I.    " 변수 선언
 ```
+</br>
+
+### < 실습 코드 >
+- ZPROGB03_0001
+```abap
+REPORT ZPROGB03_0001.
+PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
+DATA gv_result TYPE I.  " 숫자타입 gv_result 변수 선언
+
+MOVE pa_num TO gv_result. " pa_num 값을 gv_result에 넣음
+
+ADD 1 TO gv_result.   " gv_result에 1을 더함
+
+WRITE: 'YOUR input: ', pa_num.  " 문자와 pa_num 값 함께 출력
+
+NEW-LINE. " 줄바꿈
+
+WRITE: 'Result: ', gv_result.   " 문자와 gv_result 값 함께 출력
+```
+</br>
+
+- ZBC400_03_HELLO
+```abap
+REPORT ZBC400_03_HELLO.
+
+PARAMETERS pa_name TYPE string.
+
+WRITE 'Hello World!'.
+
+NEW-LINE.
+
+WRITE: 'Hello', pa_name.
+```
