Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -241,7 +241,7 @@ DATA gv_result TYPE I.    " 변수 선언
 </br>
 
 ### < 실습 코드 >
-- ZPROGB03_0001
+- 실습 1
 ```abap
 REPORT ZPROGB03_0001.
 PARAMETERS pa_num TYPE I. " 숫자타입 pa_num 입력값 받음
@@ -259,7 +259,7 @@ WRITE: 'Result: ', gv_result.   " 문자와 gv_result 값 함께 출력
 ```
 </br>
 
-- ZBC400_03_HELLO
+- 실습 2
 ```abap
 REPORT ZBC400_03_HELLO.
 
@@ -270,4 +270,14 @@ WRITE 'Hello World!'.
 NEW-LINE.
 
 WRITE: 'Hello', pa_name.
+```
+</br>
+
+- 실습 3
+```abap
+REPORT yprogb03_0002.
+
+PARAMETERS input TYPE I.
+ADD 10 TO input.
+WRITE input.
 ```
