--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -122,6 +122,7 @@
 | **SE24** | Class Builder (클래스 개발) |
 | **SE11** | ABAP Dictionary – **가장 중요** (테이블, 도메인, 뷰 등 데이터 정의) |
 | **SE80** | Object Navigator (ABAP Workbench) – **가장 중요**, 오브젝트 통합 관리 |
+| **SE93** | 트랜잭션 코드(T-Code)를 생성·조회·관리하는 화면 |
 
 </br>
 
