--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -180,6 +180,35 @@ PARAMETERS pa_num  TYPE I.       " 정수형 입력값 받음
 ```
 </br>
 
+**1-1) PARAMETERS 옵션 - OBLIGATORY**
+- 필수 입력값. 사용자가 값을 입력하지 않으면 프로그램 실행 불가.
+```abap
+PARAMETERS pv_data TYPE c OBLIGATORY.      " pv_data는 반드시 입력해야 함
+```
+</br>
+
+**1-2) PARAMETERS 옵션 - DEFAULT '값'**
+- 해당 파라미터가 처음 실행될 때 자동으로 기본값을 넣어줌.
+```abap
+PARAMETERS pv_data TYPE c DEFAULT 'Hi'.      " 프로그램 실행 시 pv_data에 자동으로 'Hi' 값이 들어감
+```
+</br>
+
+**1-3) PARAMETERS 옵션 - LOWER CASE**
+- 소문자 입력 허용.
+- 기본적으로 PARAMETERS는 입력값을 대문자로 변환함 → LOWER CASE 사용 시 그대로 유지.
+```abap
+PARAMETERS pv_data2 TYPE c LOWER CASE.
+```
+</br>
+
+**1-4) PARAMETERS 옵션 - VISIBLE LENGTH n**
+- 입력필드가 화면에 표시되는 길이만 제한.
+- 실제 필드 길이와 화면 표시 길이는 다르게 설정 가능.
+```abap
+PARAMETERS pv_data2(10) TYPE c VISIBLE LENGTH 2.      " 데이터 길이는 10이지만 화면에는 입력창이 2칸만 보임
+```
+
 **2) WRITE**
 - 화면에 값을 출력하는 키워드
 ```abap
