--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -266,6 +266,26 @@ ADD 1 TO gv_result.  " gv_result에 1 더하기
 </br>
 </br>
 
+**7) RADIOBUTTON GROUP**
+- 동일한 그룹 안에서 하나만 선택 가능한 옵션 버튼
+```abap
+PARAMETERS pv_rad1 RADIOBUTTON GROUP rad1.      " pv_rad1과 pv_rad2는 같은 그룹(rad1)
+PARAMETERS pv_rad2 RADIOBUTTON GROUP rad1.      " 둘 중 한 개만 'X' 값을 가질 수 있음
+
+pv_rad1 RADIOBUTTON GROUP rad1 DEFAULT 'X'.      " 실행 시 기본으로 pv_rad1이 선택됨
+```   
+</br>
+</br>
+
+**8) AS CHECKBOX**
+- 체크박스 형태 입력.
+- 체크됨 → `'X'`, 체크 안됨 → `' '` (공백)
+```abap
+PARAMETERS pv_chk AS CHECKBOX.
+```
+</br>
+</br>
+
 **7) 주석(Comment)**
 - `"` 또는 `*` 사용
   
@@ -318,4 +338,28 @@ REPORT yprogb03_0002.
 PARAMETERS input TYPE I.
 ADD 10 TO input.
 WRITE input.
+```
+</br>
+
+- 실습 4
+```abap
+PARAMETERS: pv_data(10)  TYPE c OBLIGATORY  DEFAULT 'Hi',
+            pv_data2(10) TYPE c LOWER CASE VISIBLE LENGTH 2.
+
+" OBLIGATORY : 필수값 처리
+" LOWER CASE : 소문자 허용
+" DEFAULT : 기본값 적용
+" VISIBLE LENGTH : 화면에 보여지는 입력필드의 길이 저장
+
+PARAMETERS: pv_rad1
+            RADIOBUTTON GROUP rad1 DEFAULT 'X',
+            pv_rad2
+            RADIOBUTTON GROUP rad1,
+            pv_chk  AS CHECKBOX.
+
+WRITE: pv_data, pv_data2.
+
+NEW-LINE.
+
+WRITE: 'Radio, Check', pv_rad1, pv_rad2, pv_chk.
 ```
