--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -96,6 +96,16 @@
 ### SAP Object 종류
 - Standard Object: SAP에서 제공하는 기본 오브젝트(프로그램, 테이블 등)
 - CBO (Customer Bolt-On): 고객사 개발 오브젝트(프로그램, 테이블, 기타)
+  
+  - CBO(Customer Bolt-On) 네이밍 규칙
+    
+    - SAP에서 새로 개발하는 오브젝트는 Z 또는 Y로 시작
+
+      - Z: 일반 커스텀 오브젝트
+      - Y: 회사 내부 표준 오브젝트
+   - 예시
+     - 패키지: ZPACB##_01
+     - 프로그램: /OSE09, /NSE09
 </br>
 
 ### 패키지(Package)와 로컬 객체(Local Object)
