--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -139,6 +139,7 @@
 ### Transport(이관) 흐름
 - 개발 → 품질 → 운영 순으로 안전하게 이동
 - **Tip:** STMS(Transaction Management System)에서 **안쪽 오브젝트부터 순서대로 릴리즈** 후 이관
+- 릴리즈 = 이관하기 전에 ‘개발 완료’라고 확정하는 버튼
 
 | 흐름 | 설명 | 도구 |
 |------|------|------|
