Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -106,6 +106,8 @@
    - 예시
      - 패키지: ZPACB##_01
      - 프로그램: /OSE09, /NSE09
+       - O : 새로운 SAP GUI 창(세션)을 열고 트랜잭션 실행
+       - N : 현재 세션에서 트랜잭션 실행
 </br>
 
 ### 패키지(Package)와 로컬 객체(Local Object)
