Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -99,13 +99,14 @@
   
   - CBO(Customer Bolt-On) 네이밍 규칙
     
-    - SAP에서 새로 개발하는 오브젝트는 Z 또는 Y로 시작
+    - SAP에서 새로 개발하는 오브젝트는 Z 또는 Y로 시작 (이관 가능)
 
       - Z: 일반 커스텀 오브젝트
       - Y: 회사 내부 표준 오브젝트
    - 예시
      - 패키지: ZPACB##_01
      - 프로그램: /OSE09, /NSE09
+       
        - O : 새로운 SAP GUI 창(세션)을 열고 트랜잭션 실행
        - N : 현재 세션에서 트랜잭션 실행
 </br>
